@@ -1,5 +1,11 @@
 \name{NEWS}
 \title{NEWS file for the gCMAP}
+\section{Changes in version 0.99.6}{
+  \itemize{
+    \item{IMPROVED}{ Updated mapIdentifiers method for SignedGeneSet class now handles more different annotation types.}
+  }
+}	
+\title{NEWS file for the gCMAP}
 \section{Changes in version 0.99.5}{
   \itemize{
     \item{NEW}{ The BigMatrix package changed its name to bigmemoryExtras. Currently, bigmemoryExtras only supports Mac and Unix platforms, thus gCMAP does not support Windows, either.}
